Try to fix stamp position on mobile

--- a/assets/scss/base.scss
+++ b/assets/scss/base.scss
@@ -534,4 +534,11 @@ body {
         }
     }
 
+    body {
+        //background-position: 97% 97%;
+        background-position: 97% 7em;
+        background-image: url(/images/cm.svg);
+        background-repeat: no-repeat;
+    }
+
 }
